@@ -26,12 +26,24 @@ if {[istarget "i?86-*-vxworks"]} {
 	 {{readelf --relocs vxworks1-lib.rd} {objdump -dr vxworks1-lib.dd}
 	  {readelf --symbols vxworks1-lib.nd}}
 	 "libvxworks1.so"}
-	{"VxWorks dynamic executable test 1" \
-	 "tmpdir/libvxworks1.so -Tvxworks1.ld -q" "" {vxworks1.s}
+	{"VxWorks executable test 1 (dynamic)" \
+	 "tmpdir/libvxworks1.so -Tvxworks1.ld -q --force-dynamic"
+	 "" {vxworks1.s}
 	 {{readelf --relocs vxworks1.rd} {objdump -dr vxworks1.dd}}
 	 "vxworks1"}
+	{"VxWorks executable test 2 (dynamic)" \
+	 "-Tvxworks1.ld -q --force-dynamic"
+	 "" {vxworks2.s}
+	 {{readelf --segments vxworks2.sd}}
+	 "vxworks2"}
+	{"VxWorks executable test 2 (static)"
+	 "-Tvxworks1.ld"
+	 "" {vxworks2.s}
+	 {{readelf --segments vxworks2-static.sd}}
+	 "vxworks2"}
     }
     run_ld_link_tests $i386tests
+    run_dump_test "vxworks1-static"
 }
 
 if { !([istarget "i?86-*-elf*"]		
